# myinvest

./: .dockerignore  .env.example  .gitignore  BROWSER_TEST_REPORT.md  CLAUDE.md  FINAL_FIX.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_REPORT.md  INTERACTIVE_TEST_REPORT.md  MULTI_ASSET_UPDATE.md  OPTIMIZER_FIX.md  OPTIMIZER_GUIDE.md  OPTIMIZER_QUICK_FIX.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  SMART_DIRECTION_UPDATE.md  START_WEB.md  TESTING_QUICK_REFERENCE.md  TEST_REPORT.md  TEST_RESULTS_FINAL.md  TEST_SUMMARY.md  V0.2_IMPLEMENTATION_COMPLETE.md  V0.3_PROPOSAL.md  check_database.sh  docker-compose.yml  init.sql  install.sh  plan.md  pytest.ini  requirements.txt  start_dashboard.sh  test_frontend_modules.py  test_imports.py  test_page_functions.py  v0.1.md  verify_schema.py  verify_strategy_usage.py
.github/: ISSUE_TEMPLATE.md
.specify/memory/: constitution.md
docs/: QUICK_ISSUE_REPORT.md  TROUBLESHOOTING.md  symbol_code_reference.md  v0.3_architecture_refactor.md  v0.3_developer_guide.md  v0.3_feature_guide.md  v0.3_user_guide.md  watchlist_integration_fix.md
examples/: rotation_strategy_example.py
investapp/: NEW_FEATURES.md  README.md  requirements.txt  setup.py
investapp/data/: myinvest.db.backup.20251023_151054
investapp/investapp/: __init__.py  app.py  config.py  scheduler.py  scheduler_app.py
investlib-advisors/: README.md  setup.py
investlib-advisors/investlib_advisors/: __init__.py  approval_workflow.py  cli.py  livermore_advisor.py
investlib-backtest/: MULTI_ASSET_USAGE.md  README.md  pyproject.toml
investlib-backtest/investlib_backtest/: __init__.py  memory_monitor.py  parallel_backtest.py  shared_cache.py
investlib-backtest/investlib_backtest/engine/: __init__.py  backtest_runner.py  backtest_runner.py.bak  combination_backtest.py  multi_asset_engine.py  multi_asset_portfolio.py  multi_asset_runner.py  portfolio.py  rotation_backtest.py
investlib-backtest/investlib_backtest/metrics/: __init__.py  performance.py  trade_analysis.py
investlib-data/: README.md  alembic.ini  setup.py
investlib-data/alembic/: env.py
investlib-data/investlib_data/: __init__.py  (+12 more)
investlib-export/: README.md  pyproject.toml
investlib-export/investlib_export/: __init__.py  excel_generator.py  font_setup.py  pdf_generator.py  word_generator.py
investlib-greeks/: pyproject.toml
investlib-greeks/investlib_greeks/: __init__.py  aggregator.py  calculator.py
investlib-margin/: pyproject.toml
investlib-optimizer/: README.md  pyproject.toml
investlib-optimizer/investlib_optimizer/: __init__.py  grid_search.py  overfitting.py  visualizer.py  walk_forward.py
investlib-quant/: README.md  setup.py
investlib-risk/: pyproject.toml
investlib-risk/src/investlib_risk/: __init__.py  concentration.py  correlation.py  dashboard.py  margin_risk.py  var.py
scripts/: backup_database.py  check_equity_curve.py  check_implementation_progress.sh  check_syntax.sh  compare_triggers.py  debug_rotation_strategy.py  debug_trade_matching.py  diagnose_issue.sh  fix_holdings.py  install_dependencies.sh  show_strategies.py  test_backtest_fix.py  test_livermore_signals.py  test_rotation_triggers.py  test_trade_stats.py  verify_foundation.sh
(+157 files in other folders)
